@startuml
class Posts {
- ObjectId _id
- Integer availableSeats
- String carColor
- String carModel
- String carYear
- Double price
- RealmList<String> confirmedUsers
- String date
- String fromLocation
- String licensePlate
- Integer numberOfSeats
- String postDescription
- String postStatus
- String postedAs
- String posterUID
- String time
- String toLocation
+ ObjectId getId()
+ void setId(ObjectId)
+ Integer getAvailableSeats()
+ void setAvailableSeats(Integer)
+ String getCarColor()
+ void setCarColor(String)
+ String getCarModel()
+ void setCarModel(String)
+ String getCarYear()
+ void setCarYear(String)
+ RealmList<String> getConfirmedUsers()
+ void setConfirmedUsers(RealmList<String>)
+ String getDate()
+ void setDate(String)
+ String getFromLocation()
+ void setFromLocation(String)
+ String getLicensePlate()
+ void setLicensePlate(String)
+ Integer getNumberOfSeats()
+ void setNumberOfSeats(Integer)
+ String getPostDescription()
+ void setPostDescription(String)
+ String getPostStatus()
+ void setPostStatus(String)
+ String getPostedAs()
+ void setPostedAs(String)
+ String getPosterUID()
+ void setPosterUID(String)
+ String getTime()
+ void setTime(String)
+ String getToLocation()
+ void setToLocation(String)
+ Double getPrice()
+ void setPrice(Double)
}
class ChatRoom {
- ObjectId _id
- RealmList<String> messages
- String userOneUID
- String userTwoUID
+ ObjectId getId()
+ void setId(ObjectId)
+ RealmList<String> getMessages()
+ void setMessages(RealmList<String>)
+ String getUserOneUID()
+ void setUserOneUID(String)
+ String getUserTwoUID()
+ void setUserTwoUID(String)
}
class Ride {
- ObjectId _id
- String driverUID
- String fromLocation
- String rideDuration
- Posts rideID
- String rideStatus
- RealmList<String> riderUIDs
- String toLocation
+ ObjectId getId()
+ void setId(ObjectId)
+ String getDriverUID()
+ void setDriverUID(String)
+ String getFromLocation()
+ void setFromLocation(String)
+ String getRideDuration()
+ void setRideDuration(String)
+ Posts getRideID()
+ void setRideID(Posts)
+ String getRideStatus()
+ void setRideStatus(String)
+ RealmList<String> getRiderUIDs()
+ void setRiderUIDs(RealmList<String>)
+ String getToLocation()
+ void setToLocation(String)
}
class Users {
- ObjectId _id
- RealmList<String> confirmedRide
- String email
- String firstName
- String lastName
- Long numberOfRidesDriven
- Long numberOfRidesTaken
- Long overAllReview
- String photoUrl
- String takingRide
- String uid
+ ObjectId getId()
+ void setId(ObjectId)
+ RealmList<String> getConfirmedRide()
+ void setConfirmedRide(RealmList<String>)
+ String getEmail()
+ void setEmail(String)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ Long getNumberOfRidesDriven()
+ void setNumberOfRidesDriven(Long)
+ Long getNumberOfRidesTaken()
+ void setNumberOfRidesTaken(Long)
+ Long getOverAllReview()
+ void setOverAllReview(Long)
+ String getPhotoUrl()
+ void setPhotoUrl(String)
+ String getTakingRide()
+ void setTakingRide(String)
+ String getUid()
+ void setUid(String)
}
class Messages {
- ObjectId _id
- String chatRoomID
- String firstName
- String lastName
- String messageSent
- String senderUID
- String time
+ ObjectId getId()
+ void setId(ObjectId)
+ String getChatRoomID()
+ void setChatRoomID(String)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ String getMessageSent()
+ void setMessageSent(String)
+ String getSenderUID()
+ void setSenderUID(String)
+ String getTime()
+ void setTime(String)
}


RealmObject <|-- Posts
RealmObject <|-- ChatRoom
RealmObject <|-- Ride
RealmObject <|-- Users
RealmObject <|-- Messages
@enduml